# heaterpi

./: Cargo.toml  Justfile  deploy.yml  heaterpi.service  inventory.yml
src/: api.rs  camera.rs  gpio.rs  main.rs
static/: index.html  script.js  style.css
templates/: index.html
