[package]
name = "heaterpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
rppal = "0.15.0"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
