[package]
name = "heaterpi"
version = "0.1.0"
edition = "2021"

[features]
default = []
rpi = ["dep:rppal"]

[dependencies]
askama_axum = "0.3.0"
axum = "0.6.20"
fastrand = "2.0.1"
image = { version = "0.24.7", default-features = false, features = ["rgb"] }
rppal = { version = "0.15.0", optional = true }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
